--- a/PR/Zusammenfassung.tex
+++ b/PR/Zusammenfassung.tex
@@ -23,6 +23,18 @@
 % Logistic Regression 1
 \include{pr03}
 
+% Logistic Regression 2
+\include{pr04}
+
+% Naive Bayes
+\include{pr05}
+
+% Discriminant Analysis 1
+\include{pr06}
+
+% Discriminant Analysis 2
+\include{pr07}
+
 % SVM + Kernels
 \include{pr12_to_pr15}
 \end{document}
