PR Regression + Perceptron

--- a/PR/Zusammenfassung.tex
+++ b/PR/Zusammenfassung.tex
@@ -5,6 +5,7 @@
 \usepackage{mathtools}
 \usepackage{gensymb}
 \usepackage{float}
+\usepackage{listings}
 
 \usepackage[a4paper, left=1cm, right=1cm, top=2cm, bottom=3cm]{geometry}
 
@@ -16,6 +17,7 @@
 \begin{document}
 % Introduction
 \include{pr01}
+%TODO: Evaluation Methods
 
 % Pattern Recognition Basics
 \include{pr02}
@@ -35,6 +37,29 @@
 % Discriminant Analysis 2
 \include{pr07}
 
+% Norms (8)
+
+% Rosenblatt's Perceptron
+\include{pr09}
+
+% Multi-Layer Perceptrons (10)
+
+% Optimization (11)
+
 % SVM + Kernels
 \include{pr12_to_pr15}
+%TODO PCA, Fisher Kernels, Support Vector Regression
+
+% Laplacian SVM (16)
+
+% EM-Algorithm (17) !!!!!
+
+% Addaptive Segmentation of MRI Data (18)
+
+% Independent Component Analysis (19)
+
+% Model Assessment (20)
+
+% AdaBoost (21) !!!!!!
+
 \end{document}
