--- a/PR/pr07.tex
+++ b/PR/pr07.tex
@@ -79,3 +79,25 @@
         \end{enumerate}
 \end{itemize}
 
+\subsection*{Linear Regression}
+For a given set of learning data we use matrix notation:
+$$X =\begin{pmatrix}
+    x_1^T & 1\\
+    x_2^T & 1\\
+    \dots & \dots\\
+    x_m^T & 1 
+\end{pmatrix} \in \mathbb{R}^{m \times (d+1)}, y = \begin{pmatrix} y_1 \\ y_2\\ \dots \\y_m \end{pmatrix}$$
+and define $\theta = \begin{pmatrix} \alpha \\ \alpha_0\end{pmatrix}$.
+
+    One option to estimate $\theta$ is to solve the linear regression problem (minimize least-square error):
+$$\hat{\theta} = \underset{\theta}{argmin} \norm{X \theta - y}_2^2 = \underset{\theta}{argmin} \sum_{i=1}^{m} (\theta^T x_i - y_i)^2 = \underset{\theta}{argmin} (X \theta - y)^T (X \theta -y)$$
+and thus we get
+$$ \hat{\theta} = (X^T X)^{-1} X^T y $$
+if the colum vectors of $X$ are mutually independent.
+
+Regression vs. Classification: Continuous output vs. discrete output
+
+\subsubsection*{Ridge Regression}
+In ridge regression we extend the objective function by an additional term constraining the Euclidian length of the parameter vector $\theta$:
+$$ \hat{\theta} = \underset{\theta}{argmin} \norm{X\Theta - y}_2^2 + \lambda \norm{\theta}_2^2$$
+
